# utf8-normalization

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  tb_normalization.rs  unicode.rs
